Fixed a few bugs occurring when a shapefile table did not have a district name.